packages/typ/tests/fixtures/diagnostics/0929_gadt_operator_on_wrong_branch_07.ml.expected
File "0929_gadt_operator_on_wrong_branch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0929_gadt_operator_on_wrong_branch_07 is not a valid module name.

File "0929_gadt_operator_on_wrong_branch_07.ml", line 11, characters 19-20:
11 |     | WBool_eta -> x + 7
                        ^
Error: The value x has type a = bool but an expression was expected of type
         int
